resources/mhttpd.css
/* ... */
input[type=button].navButtonSel {
   color: #F8F8F8;
	font-size: 100%;
	padding:0.25em;
	padding-left: 0.5em;
	padding-right: 0.5em;
	border:1px solid #808080;
	border-radius: 5px;
	margin-bottom:1px;

   background: #676767; /* Old browsers */
   background: -moz-linear-gradient(top,  #676767 0%, #999999 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#676767), color-stop(100%,#999999)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #676767 0%,#999999 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top,  #676767 0%,#999999 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  #676767 0%,#999999 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #676767 0%,#999999 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#676767', endColorstr='#999999',GradientType=0 ); /* IE6-9 */
}

table.headerTable{
	width:100%;
	color:#EEEEEE;
	background-color: #E0E0E0;
	border-bottom:1px solid #000000;
	border-collapse: collapse;
	border-spacing: 0;
	margin-bottom: 0.5em;
	
   background: #e9e9e9; /* Old browsers */
   background: -moz-linear-gradient(top,  #e9e9e9 0%, #b7b7b7 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e9e9e9), color-stop(100%,#b7b7b7)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #e9e9e9 0%,#b7b7b7 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top,  #e9e9e9 0%,#b7b7b7 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  #e9e9e9 0%,#b7b7b7 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #e9e9e9 0%,#b7b7b7 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', endColorstr='#b7b7b7',GradientType=0 ); /* IE6-9 */
}

table.headerTable td{
	border: none;
}

div.footerDiv{
	background-color: #808080;
	text-align: center;
	padding:1em;
	color:#EEEEEE;
	border-top:1px solid #000000;
	height:3em;
}

div.push{
	height:3em;
}

div.footerDiv a{
	color: #f1c40f;
}

input[type=text]{
	font-size: 100%
}

div.wrapper{
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -3em;
}

.historyConfigTable, .dialogTable, .runlogTable, .messageBox, .genericTable, .sequencerTable{
	border-radius: 12px;
	border: 2px solid #00B26B;
	background-color: #EEEEEE;
	color:#111111;
	padding:0.5em;
	margin-top: 0em;
	margin-bottom:1em;
}

.runlogTable td {
	border: none;
   text-align: left;
   font-family: monospace;
}

.runlogTable pre {
   line-height: 125%;
}

table.sequencerTable td{
	text-align: left;
}

table.sequencerTable td table{
	margin: 0px;
}

table.dialogTable td{
	border:none;
}

.historyConfigTable {
	border: none;
}

table.historyConfigTable td{
    border-bottom: 1px solid;
    text-align: left;
}

table.historyConfigTable th{
    border-top: 2px solid;
    border-bottom: 2px solid;
    text-align: center;
    font-weight: bold;
}

.historyTable td{
	text-align: left;
}

.ODBpath{
	text-align: left;
	font-size: 120%;
	background-color: #EEEEEE;
}

/*Status page objects/////////////////////////////////////////////////*/

/*status page master table*/
#statusTable{
	padding:0.5em;
	padding-top: 0em;
	background-color: #EEEEEE;
}

/*experiment title*/
#experimentTitle{
	text-align: center;
	font-size: 120%;
}

/*status page time*/
#masterTime{
	text-align: center;
	font-size: 120%;
}

#runButton{
	padding:0.25em;
	margin-top:0.25em;
}

/*Equipment table*/
.subStatusTable, .alarmTable{
	border:2px solid #00B26B;
	border-radius: 12px;	
	padding:2px;
}

.subStatusTitle{
	font-size: 120%;
	font-weight: bold;
	border-radius:12px;
	background-color:#3498db; 
	color:#EEEEEE; 
}

/*make sure fills in subStatusTable cells don't have sharp corners poking into the curved table corner"*/
.subStatusTable tr:first-child td:first-child{
	border-top-left-radius: 12px;
}
.subStatusTable tr:first-child td:last-child{
	border-top-right-radius: 12px;
}
.subStatusTable tr:last-child td:first-child{
	border-bottom-left-radius: 12px;
}
.subStatusTable tr:last-child td:last-child{
	border-bottom-right-radius: 12px;
}

td.meterCell{
	padding: 0px;
	text-align: left;
	height:26px;
}

#runNumberCell{
	font-size:120%;
	line-height: 1.25em;
	vertical-align: middle;
	border-radius: 12px;
	border:2px solid #EEEEEE;
	width:15%;
}

.alarmTable{
	border-spacing: 0px 1px;
}

.alarmTable td{
	border: none;
}

.greenLight{
	background-color: #00E600;
	border-radius: 5px;
	border: 1px solid #000000 !important;
}

.redLight{
	background-color: #c0392b;
	border-radius: 5px;
	border: 1px solid #000000 !important;
	color: #EEEEEE;

	animation-name: pulse;
	-webkit-animation-name: pulse;	

	animation-duration: 1.5s;	
	-webkit-animation-duration: 1.5s;

	animation-iteration-count: 0; /*infinite*/
	-webkit-animation-iteration-count: 0; /*infinite*/
}

@keyframes pulse{
	0% {
		background-color:#EEEEEE;
		border-color:#EEEEEE;
	}
	50% {
		background-color:#c0392b;
		border-color:#000000;
	}
	100% {
		background-color:#EEEEEE;
		border-color:#EEEEEE;
	}

}

@-webkit-keyframes pulse{
	0% {
		background-color:#EEEEEE;
		border-color:#EEEEEE;
	}
	50% {
		background-color:#c0392b;
		border-color:#000000;
	}
	100% {
		background-color:#EEEEEE;
		border-color:#EEEEEE;
	}

}

.yellowLight{
	background-color: #f1c40f;
	border-radius: 5px;
	border: 1px solid #000000 !important;
}

.whiteLight{
	background-color: #EEEEEE;
}

.msgService{
	background-color: #C0C0C0;
	border-radius: 12px;
	line-height: 105%;
}

/*---- ODB pages ----*/
.ODBkey{
	text-align: left;
	padding-left: 2em;
   border-top: 1px solid #DDDDDD;
}

.ODBvalue{
	text-align: left;
   border-top: 1px solid #DDDDDD;
}

.ODBtable{
	border-radius: 25px;
	border: 2px solid #00B26B;
	background-color: #EEEEEE;
	color:#111111;
	padding:0.5em;
	margin-top: 1em;
	margin-bottom:1em;
}

.genericStripe{
	border-spacing: 0px 1px;
}
/* ... */

